# defectsense

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  alert_generator.py  anomaly_detector.py  context_retriever.py  orchestrator.py  root_cause_reasoner.py
app/api/: websocket.py
app/api/routes/: __init__.py  alerts.py  dashboard.py  evaluation.py  maintenance_logs.py  sensors.py
app/models/: alert.py  anomaly.py  maintenance.py  sensor.py  state.py
app/services/: __init__.py  amem_service.py  blob_storage_service.py  drift_monitoring_service.py  evaluation_service.py  letta_service.py  ml_service.py  mongodb_service.py  postgres_service.py  qdrant_service.py  redis_service.py  sensor_ingestion.py
data/: download_data.py  feature_queries.sql  generate_logs.py  index_maintenance_logs.py  load_to_postgres.py  stream_simulator.py  test_maintenance_logs_e2e.py  test_pipeline.py
evaluation/: ml_benchmark.json  run_evaluation.py
frontend/: README.md  app.py  requirements.txt
ml/: model_registry_service.py  promote_to_production.py  train_autoencoder.py  train_isolation_forest.py
tests/: conftest.py  test_agents.py  test_api.py  test_blob_storage.py  test_drift_monitoring.py  test_evaluation.py  test_integration_new_features.py  test_maintenance_logs.py  test_ml_models.py  test_model_registry.py  test_postgres_service.py
