[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defectsense"
version = "0.1.0"
description = "Manufacturing Defect Root-Cause Agent — Hybrid ML + GenAI"
authors = [{ name = "Shital Nandre" }]
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ml*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
